crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_nested_function_in_while_block.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
      type_params: []
      params: []
      return_type:
        Named:
          - void
          - start: 23
            end: 27
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - VarDecl:
              mutable: true
              name:
                name: i
                span:
                  start: 46
                  end: 47
              type_ref:
                Named:
                  - number
                  - start: 49
                    end: 55
              init:
                Literal:
                  - Number: 0
                  - start: 58
                    end: 59
              span:
                start: 42
                end: 60
          - While:
              cond:
                Binary:
                  op: Lt
                  left:
                    Identifier:
                      name: i
                      span:
                        start: 80
                        end: 81
                  right:
                    Literal:
                      - Number: 5
                      - start: 84
                        end: 85
                  span:
                    start: 80
                    end: 85
              body:
                statements:
                  - FunctionDecl:
                      name:
                        name: increment
                        span:
                          start: 108
                          end: 117
                      type_params: []
                      params: []
                      return_type:
                        Named:
                          - void
                          - start: 123
                            end: 127
                      return_ownership: ~
                      predicate: ~
                      body:
                        statements:
                          - Increment:
                              target:
                                Name:
                                  name: i
                                  span:
                                    start: 150
                                    end: 151
                              span:
                                start: 150
                                end: 154
                        span:
                          start: 128
                          end: 172
                      span:
                        start: 105
                        end: 172
                  - Expr:
                      expr:
                        Call:
                          callee:
                            Identifier:
                              name: increment
                              span:
                                start: 189
                                end: 198
                          args: []
                          span:
                            start: 189
                            end: 200
                      span:
                        start: 189
                        end: 201
                  - Increment:
                      target:
                        Name:
                          name: i
                          span:
                            start: 218
                            end: 219
                      span:
                        start: 218
                        end: 222
                span:
                  start: 87
                  end: 236
              span:
                start: 73
                end: 236
        span:
          start: 28
          end: 246
      span:
        start: 9
        end: 246
